[package]
name = "todo"
version = "0.1.0"
edition = "2021"


[package.metadata.bundle]
name = "todo"
identifier = "io.github.jobin-b.todo"
short_description = "a simple todo app" 

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
confy = "0.6.1"
serde = "1.0.204"
serde_derive = "1.0.204"
